// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ObjectStatus defaults to unknown state 1`] = `
<FetchContextProvider>
  <EditorContextProvider>
    <ObjectStatus
      pid="foo:123"
    >
      <span
        className="unknown"
      >
        <span
          className="indicator"
        >
          ◉
        </span>
         
        Unknown
      </span>
    </ObjectStatus>
  </EditorContextProvider>
</FetchContextProvider>
`;

exports[`ObjectStatus displays the state found in the response 1`] = `
<FetchContextProvider>
  <EditorContextProvider>
    <ObjectStatus
      pid="foo:123"
    >
      <span
        className="inactive"
      >
        <span
          className="indicator"
        >
          ◉
        </span>
         
        Inactive
      </span>
    </ObjectStatus>
  </EditorContextProvider>
</FetchContextProvider>
`;
